@@ -1,7 +1,9 @@
 package com.xiaoma.rest.framework.page;
 
 import com.xiaoma.rest.framework.exception.PaginatorNotInitializeException;
+import com.xiaoma.rest.framework.exception.PaginatorllegalITotalCountException;
 import org.apache.http.NameValuePair;
+import org.apache.http.client.utils.URIBuilder;
 import org.apache.http.client.utils.URLEncodedUtils;
 import org.junit.After;
 import org.junit.Before;
@@ -14,8 +16,9 @@ import javax.servlet.http.HttpServletRequest;
 import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
-import java.net.URL;
 import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 import static org.junit.Assert.assertEquals;
 
@@ -68,7 +71,7 @@ public class PaginatorTest {
     }
 
     @Test(expected = PaginatorNotInitializeException.class)
-    public void buildInit() throws PaginatorNotInitializeException {
+    public void buildInit() throws PaginatorNotInitializeException, PaginatorllegalITotalCountException, MalformedURLException, URISyntaxException {
         HttpServletRequest nullMockRequest = new MockHttpServletRequest("get", "");
         Paginator paginator = new Paginator(nullMockRequest, this.paginationParameter);
         paginator.build(200);
@@ -83,7 +86,7 @@ public class PaginatorTest {
         String xxx = this.mockRequest.getParameter("page");
 
         Paginator paginator = new Paginator(this.mockRequest, this.paginationParameter);
-        assertEquals(Integer.valueOf(1), paginator.getCurrent());
+        assertEquals(Integer.valueOf(1), paginator.getCurrentPage());
         assertEquals(Integer.valueOf(20), paginator.getPageSize());
         logger.debug(this.mockRequest.getRequestURL().toString());
         logger.debug(this.mockRequest.getQueryString());
@@ -98,13 +101,12 @@ public class PaginatorTest {
         this.mockRequest.setQueryString(this.queryUrl);
         this.mockRequest.setServerName("localhost");
         this.mockRequest.setServerPort(8080);
-        // this.mockRequest.setRequestURI(queryUri);
         this.mockRequest.setParameter("page", "1");
         this.mockRequest.setParameter("name", new String[]{"vincent", "tom"});
 
         paginator = new Paginator(this.mockRequest, this.paginationParameter);
 
-        assertEquals(Integer.valueOf(1), paginator.getCurrent());
+        assertEquals(Integer.valueOf(1), paginator.getCurrentPage());
         assertEquals(Integer.valueOf(200), paginator.getPageSize());
 
         // 设置page_size大于默认参数
@@ -113,14 +115,13 @@ public class PaginatorTest {
         this.mockRequest.setQueryString(this.queryUrl);
         this.mockRequest.setServerName("localhost");
         this.mockRequest.setServerPort(8080);
-        // this.mockRequest.setRequestURI(queryUri);
         this.mockRequest.setParameter("page", "1");
         this.mockRequest.setParameter("page_size", "201");
         this.mockRequest.setParameter("name", new String[]{"vincent", "tom"});
 
         paginator = new Paginator(this.mockRequest, this.paginationParameter);
 
-        assertEquals(Integer.valueOf(1), paginator.getCurrent());
+        assertEquals(Integer.valueOf(1), paginator.getCurrentPage());
         assertEquals(Integer.valueOf(200), paginator.getPageSize());
 
         // 设置page_size等于默认参数
@@ -129,14 +130,13 @@ public class PaginatorTest {
         this.mockRequest.setQueryString(this.queryUrl);
         this.mockRequest.setServerName("localhost");
         this.mockRequest.setServerPort(8080);
-        // this.mockRequest.setRequestURI(queryUri);
         this.mockRequest.setParameter("page", "1");
         this.mockRequest.setParameter("page_size", "200");
         this.mockRequest.setParameter("name", new String[]{"vincent", "tom"});
 
         paginator = new Paginator(this.mockRequest, this.paginationParameter);
 
-        assertEquals(Integer.valueOf(1), paginator.getCurrent());
+        assertEquals(Integer.valueOf(1), paginator.getCurrentPage());
         assertEquals(Integer.valueOf(200), paginator.getPageSize());
 
         // 设置page_size小于默认参数
@@ -145,14 +145,28 @@ public class PaginatorTest {
         this.mockRequest.setQueryString(this.queryUrl);
         this.mockRequest.setServerName("localhost");
         this.mockRequest.setServerPort(8080);
-        // this.mockRequest.setRequestURI(queryUri);
         this.mockRequest.setParameter("page", "1");
         this.mockRequest.setParameter("page_size", "199");
         this.mockRequest.setParameter("name", new String[]{"vincent", "tom"});
 
         paginator = new Paginator(this.mockRequest, this.paginationParameter);
 
-        assertEquals(Integer.valueOf(1), paginator.getCurrent());
+        assertEquals(Integer.valueOf(1), paginator.getCurrentPage());
+        assertEquals(Integer.valueOf(199), paginator.getPageSize());
+
+        // 不设置page
+        // 模拟请求
+        this.mockRequest = new MockHttpServletRequest("get", this.requestUrl);
+        this.mockRequest.setQueryString(this.queryUrl);
+        this.mockRequest.setServerName("localhost");
+        this.mockRequest.setServerPort(8080);
+        // this.mockRequest.setParameter("page", "1");
+        this.mockRequest.setParameter("page_size", "199");
+        this.mockRequest.setParameter("name", new String[]{"vincent", "tom"});
+
+        paginator = new Paginator(this.mockRequest, this.paginationParameter);
+
+        assertEquals(Integer.valueOf(1), paginator.getCurrentPage());
         assertEquals(Integer.valueOf(199), paginator.getPageSize());
 
 
@@ -161,46 +175,42 @@ public class PaginatorTest {
 
 
     @Test
-    public void build() throws PaginatorNotInitializeException, MalformedURLException, URISyntaxException {
-        int currentNum = 1;
-        int totalNum = 1001;
-        int pageSize = 20;
-        // 请求
-        String requestUrl = "http://localhost:8080/test/api/demo/";
-        // 参数
-        String queryUri = "?page=" + currentNum + "&page_size=200&name=vincent&name=tom";
-
-        String currentUrl = requestUrl + queryUri;
+    public void build() throws PaginatorNotInitializeException, MalformedURLException, URISyntaxException, PaginatorllegalITotalCountException {
         // 模拟请求
-        HttpServletRequest mockRequest = new MockHttpServletRequest("get", requestUrl + queryUri);
+        this.mockRequest = new MockHttpServletRequest("get", this.requestUrl);
+        this.mockRequest.setQueryString(this.queryUrl);
+        this.mockRequest.setServerName("localhost");
+        this.mockRequest.setServerPort(8080);
+        this.mockRequest.setParameter("page", "1");
+        this.mockRequest.setParameter("page_size", "200");
+        this.mockRequest.setParameter("name", new String[]{"vincent", "tom"});
 
+        Paginator paginator = new Paginator(this.mockRequest, this.paginationParameter);
+        paginator.build(300);
+        assertEquals(Integer.valueOf(1), paginator.getCurrentPage());
+        assertEquals(Integer.valueOf(200), paginator.getPageSize());
 
-        // 创建Paginator对象
-        Paginator paginator = new Paginator(mockRequest, this.paginationParameter);
+        assertEquals(null, paginator.getPreviousUrl());
+        assertEquals(Integer.valueOf(200), paginator.getPageSize());
 
-        paginator.setTotal(totalNum);
-        // 设置完总数以后可以计算
-        paginator.build();
-
-
-        // 开始验证测试
-
+        // 获取下一页的url, 得到的参数不变,页码变成2
         String nextUrl = paginator.getNextUrl();
 
-        // 比较计算完了以后的值,url是否符合, 页码
-        URL url = new URL(requestUrl + queryUri);
-        String xxx = url.getQuery();
-        URI uri = url.toURI();
-        List<NameValuePair> params = URLEncodedUtils.parse(new URI(nextUrl), "UTF-8");
-        for (NameValuePair pair : params) {
-            if (pair.getName() == "page") {
+        URIBuilder urlb = new URIBuilder(nextUrl);
+        List<NameValuePair> params = urlb.getQueryParams();
+
+        // urlb.setParameter("page", "2");
+        // List<NameValuePair> params = URLEncodedUtils.parse(new URI(nextUrl), "UTF-8");
+        for(NameValuePair pair : params) {
+            logger.debug(pair.getValue());
+            if (pair.getName() == "page"){
                 assertEquals(2, Integer.parseInt(pair.getValue()));
             }
         }
-        String nextQueryUri = "?page=" + currentNum + 1 + "&page_size=200&name=vincent&name=tom";
-        assertEquals(requestUrl + queryUri, nextUrl);
-        assertEquals("", paginator.getPreviousUrl());
-        // google Guava
-        // final Map<String, String> map = Splitter.on('&').trimResults().withKeyValueSeparator("=").split(xxx);
+        // 转换键值对
+        // Map<String, String> result2 = params.stream().collect(
+        //                              Collectors.toMap(x -> x.getName(), x -> x.getValue()));
+
+
     }
 }
